--- a/RotateAndZoom/Base.lproj/Main.storyboard
+++ b/RotateAndZoom/Base.lproj/Main.storyboard
@@ -30,11 +30,21 @@
                                     <action selector="valueChanged:" destination="vXZ-lx-hvc" eventType="valueChanged" id="LTM-3R-8as"/>
                                 </connections>
                             </slider>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="52s-Mc-NDY">
+                                <rect key="frame" x="138" y="504" width="44" height="44"/>
+                                <state key="normal" title="reset">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="reset:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="jU1-qT-jV6"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
                     <connections>
                         <outlet property="_cropView" destination="JPg-lO-tRQ" id="gzB-JT-Yx8"/>
+                        <outlet property="_slider" destination="fgV-nL-KlU" id="lri-J4-hBC"/>
                         <outlet property="imageView" destination="bT8-71-KE2" id="cPr-rZ-6FW"/>
                     </connections>
                 </viewController>
