--- a/RotateAndZoom/Base.lproj/Main.storyboard
+++ b/RotateAndZoom/Base.lproj/Main.storyboard
@@ -16,7 +16,11 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="bT8-71-KE2">
+                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="i4I-No-Jgw">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="419"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </view>
+                            <view userInteractionEnabled="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="bT8-71-KE2">
                                 <rect key="frame" x="41" y="28" width="200" height="200"/>
                                 <color key="backgroundColor" red="0.51764705879999995" green="0.86666666670000003" blue="0.25490196079999999" alpha="1" colorSpace="calibratedRGB"/>
                             </view>
@@ -24,26 +28,33 @@
                                 <rect key="frame" x="60" y="152" width="200" height="200"/>
                                 <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                             </view>
-                            <slider opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" minValue="-45" maxValue="45" translatesAutoresizingMaskIntoConstraints="NO" id="fgV-nL-KlU">
-                                <rect key="frame" x="10" y="463" width="300" height="31"/>
-                                <connections>
-                                    <action selector="valueChanged:" destination="vXZ-lx-hvc" eventType="valueChanged" id="LTM-3R-8as"/>
-                                </connections>
-                            </slider>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="52s-Mc-NDY">
-                                <rect key="frame" x="138" y="504" width="44" height="44"/>
-                                <state key="normal" title="reset">
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <connections>
-                                    <action selector="reset:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="jU1-qT-jV6"/>
-                                </connections>
-                            </button>
+                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="U0H-Bt-9Vf">
+                                <rect key="frame" x="0.0" y="383" width="320" height="165"/>
+                                <subviews>
+                                    <slider opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" minValue="-45" maxValue="45" translatesAutoresizingMaskIntoConstraints="NO" id="fgV-nL-KlU">
+                                        <rect key="frame" x="10" y="61" width="300" height="31"/>
+                                        <connections>
+                                            <action selector="valueChanged:" destination="vXZ-lx-hvc" eventType="valueChanged" id="LTM-3R-8as"/>
+                                        </connections>
+                                    </slider>
+                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="52s-Mc-NDY">
+                                        <rect key="frame" x="138" y="104" width="44" height="44"/>
+                                        <state key="normal" title="reset">
+                                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="reset:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="jU1-qT-jV6"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
                     <connections>
                         <outlet property="_cropView" destination="JPg-lO-tRQ" id="gzB-JT-Yx8"/>
+                        <outlet property="_gestureView" destination="i4I-No-Jgw" id="VeV-o9-zr7"/>
                         <outlet property="_slider" destination="fgV-nL-KlU" id="lri-J4-hBC"/>
                         <outlet property="imageView" destination="bT8-71-KE2" id="cPr-rZ-6FW"/>
                     </connections>
